--- a/mern-amazona-master/Dockerfile
+++ b/mern-amazona-master/Dockerfile
@@ -1,3 +1,12 @@
 FROM node:alpine
 WORKDIR /app
-ADD \Windows\System32\agent\_work\2\a\ /app
+COPY . /app
+WORKDIR /app/frontend
+RUN  npm install -g concurrently && npm install 
+WORKDIR /app/backend
+RUN  npm install -g concurrently && npm install
+WORKDIR /app 
+CMD ["npx", "concurrently", "npm start --prefix frontend", "npm start --prefix backend"]
+
+
+
