--- a/mern-amazona-master/Dockerfile
+++ b/mern-amazona-master/Dockerfile
@@ -6,4 +6,4 @@ RUN  npm install -g concurrently && npm install
 WORKDIR /app/backend
 RUN  npm install -g concurrently && npm install
 WORKDIR /app 
-ENTRYPOINT ["npx", "concurrently", "npm start --prefix frontend", "npm start --prefix backend"] --host=0.0.0.0
+CMD ["npx", "concurrently", "npm start --prefix frontend", "npm start --prefix backend"]
