--- a/mern-amazona-master/Dockerfile
+++ b/mern-amazona-master/Dockerfile
@@ -5,5 +5,5 @@ WORKDIR /app/frontend
 RUN  npm install -g concurrently && npm install 
 WORKDIR /app/backend
 RUN  npm install -g concurrently && npm install
-WORKDIR /app 
-CMD ["npx", "concurrently", "npm start --prefix frontend", "npm start --prefix backend"]
+WORKDIR /app/frontend
+CMD ["npm","start"]
